# python-typedstream

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  tox.ini
.github/workflows/: ci.yml
src/typedstream/: __init__.py  __main__.py  advanced_repr.py  archiver.py  archiving.py  stream.py
src/typedstream/types/: __init__.py  _common.py  appkit.py  core_graphics.py  foundation.py  nextstep.py
tests/: test_typedstream.py
tests/data/: Emacs.clr  Empty2D macOS 10.14.gcx  Empty2D macOS 13.gcx
typedstream/: __init__.py  __main__.py  advanced_repr.py  api.py  archiver.py  classes.py  encodings.py  old_binary_plist.py  stream.py  structs.py
typedstream/types/: __init__.py  _common.py  appkit.py  foundation.py  nextstep.py
