[metadata]
name = typedstream
version = attr: typedstream.__version__
url = https://github.com/dgelessus/python-typedstream
author = dgelessus
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Topic :: Software Development :: Disassemblers
	Topic :: System
	Topic :: Utilities
	License :: OSI Approved :: MIT License
	Operating System :: MacOS :: MacOS X
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
license = MIT
license_files =
	LICENSE
description = TODO
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	typedstream
	streamtyped
	nsarchiver
	nsunarchiver
	nxtypedstream
	mac
	macosx
	osx
	macos
	nextstep

[options]
python_requires = >=3.6
packages = find:

[options.packages.find]
include =
	typedstream
	typedstream.*

[options.entry_points]
console_scripts =
	typedstream = typedstream.__main__:main

[flake8]
extend-exclude =
	.mypy_cache/,
	build/,
	dist/,

# The following issues are ignored because they do not match our code style:
ignore =
	E226, # missing whitespace around arithmetic operator
	E261, # at least two spaces before inline comment
	E501, # line too long
	W293, # blank line contains whitespace
	W503, # line break before binary operator

# flake8-tabs configuration
use-flake8-tabs = true
blank-lines-indent = always
indent-tabs-def = 1

[mypy]
files=typedstream/**/*.py
python_version = 3.6

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_untyped_decorators = True

no_implicit_optional = True

warn_unused_ignores = True
warn_unreachable = True

warn_redundant_casts = True
