[metadata]
name = typedstream
version = attr: typedstream.__version__
url = https://github.com/dgelessus/python-typedstream
author = dgelessus
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Topic :: Software Development :: Disassemblers
	Topic :: System
	Topic :: Utilities
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
	Operating System :: MacOS :: MacOS X
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
license = LGPL-3.0-or-later
license_files =
	COPYING.txt
	COPYING.LESSER.txt
description = A pure Python, cross-platform library/tool for reading Mac OS X and NeXTSTEP typedstream files
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	typedstream
	streamtyped
	nsarchiver
	nsunarchiver
	nxtypedstream
	mac
	macosx
	osx
	macos
	nextstep

[options]
python_requires = >=3.6
install_requires =
	typing-extensions; python_version < "3.8"
packages = find:
package_dir =
	= src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	pytypedstream = typedstream.__main__:main

[flake8]
extend-exclude =
	.mypy_cache/,
	build/,
	dist/,

# The following issues are ignored because they do not match our code style:
ignore =
	# These E1 checks report many false positives for code that is (consistently) indented with tabs alone.
	E101, # indentation contains mixed spaces and tabs
	E117, # over-indented
	E126, # continuation line over-indented for hanging indent
	E226, # missing whitespace around arithmetic operator
	E261, # at least two spaces before inline comment
	E501, # line too long
	W191, # indentation contains tabs
	W293, # blank line contains whitespace
	W503, # line break before binary operator

[mypy]
files=src/**/*.py
python_version = 3.6

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_untyped_decorators = True

no_implicit_optional = True

warn_unused_ignores = True
warn_unreachable = True

warn_redundant_casts = True
